--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,100;1,200&display=swap');
 header nav.navbar .navbar-brand{color:#fff;}
+body{
+    font-family: 'Poppins', sans-serif;
+}
 section.todo-outer {
     width: 100%;
     float: left;
@@ -14,7 +17,7 @@ section.todo-outer h1 {
     float: left;
     padding: 40px;
     box-shadow: 0px 0px 10px #c1c1c1;
-    background: rgb(129, 156, 211);
+    background: rgb(211, 205, 129);
 }
 table tr td button {
     background: no-repeat;
